--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
 
       </section>
-      
+
       {% for feature in features %}
       {% ifequal feature.type "feature-schedule" %}
       {% if feature.days|not-empty %}
@@ -306,14 +306,18 @@
           <div class="uv-shortcard__container js-items-truncater">
             {% for fmember in feature.members %}
             {% with member=members|by-id:@fmember.id %}
-            <div data-link="{{member.id}}" class="uv-shortcard  uv-shortcard--speaker  details_link">
+            <div data-link="{{member.id}}" data-fname="{member.firstName}}"  data-lname="{{member.lastName}}" class="uv-shortcard  uv-shortcard--speaker  details_link">
               <div class="uv-shortcard__img-wrap">
                 {% if member.photo %}
                 <a class="uv-shortcard__img" style="background-image: url({{ member.photo }})"><span class="uv-shortcard__img-mask clr-bg clr-text"></span></a>
                 {% else %}
+                {% if member.email %}
+                <a class="uv-shortcard__img" style="background-image: url(url('https://www.gravatar.com/avatar/{{member.email|lower|hash:"md5"}}?s=120&d=retro))"><span class="uv-shortcard__img-mask clr-bg clr-text"></span></a>
+                  {% else %}
                 <a style="background-color: {{member.id|color}}" class="uv-shortcard__img-placeholder">
                   {{member.firstName|first|capitalize}}{{member.lastName|first|capitalize}}
                   <span class="uv-shortcard__img-mask clr-bg clr-text"></span></a>
+                    {% endif %}
                 {% endif %}
               </div>
               <div class="uv-shortcard__title">{{member.firstName}} {{member.lastName}}</div>
@@ -505,6 +509,9 @@
               <div class="uv-card__header">
                 {% if speaker.photo %}
                 <div class="uv-card__img" style="background-image: url({{ speaker.photo.origin.cropUrl }})"></div>
+                {% else %}
+                {% if speaker.email %}
+                <div class="uv-card__img" style="background-image: url('https://www.gravatar.com/avatar/{{speaker.email|lower|hash:"md5"}}?s=120&d=retro)"></div>
                 {% else %}
                 <span class="uv-card__img-placeholder" style="background-color: {{speaker.id|color}}">
                   {{speaker.firstName|first|capitalize}}{{speaker.lastName|first|capitalize}}
@@ -889,7 +896,6 @@
     </div>
 
     <script src="/js/yonkers-websites.min.js"></script>
-
     <script type="text/javascript">
     {% if settings.analytics %}
       {{ settings.analytics|safe }}
