--- a/index.html
+++ b/index.html
@@ -517,6 +517,7 @@
                   {{speaker.firstName|first|capitalize}}{{speaker.lastName|first|capitalize}}
                 </span>
                 {% endif %}
+                {% endif %}
                 <h2 class="uv-card__title">{{speaker.firstName}} {{speaker.lastName}}</h2>
                 {% if speaker.position %}
                 <div class="uv-card__subtitle">{{ speaker.position }}</div>
