--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                 {% if member.photo %}
                 <div class="uv-card__img" style="background-image: url({{ member.photo }})"></div>
                 {% else %}
-                {% if speaker.email %}
+                {% if member.email %}
                 <div class="uv-card__img" style="background-image: url('https://www.gravatar.com/avatar/{{speaker.email|lower|hash:"md5"}}?s=120&d=retro)"></div>
                 {% else %}
                 <span class="uv-card__img-placeholder" style="background-color: {{member.id|color}}">
